# ux_designer_replacement_agent_be

./: .gitignore  README.md  package-lock.json  pyproject.toml
src/confluence_plugin_be/: config.py  main.py  test_gpt_image.py
src/confluence_plugin_be/api/: routes.py
src/confluence_plugin_be/models/: request_models.py
src/confluence_plugin_be/models/requests/: ui_request_model.py
src/confluence_plugin_be/models/responses/: ui_response_model.py
src/confluence_plugin_be/prompts/: mobile_ui_prompt.md  web_ui_prompt.md
src/confluence_plugin_be/services/: ui_generator.py
