[project]
name = "confluence-plugin-be"
version = "0.1.0"
description = "Confluence plugin backend to generate ux/ui images through an LLM"
authors = [
    {name = "MateoMazziniOngay", email = "mateomazzini610@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn[standard]>=0.34.2"]
requires-python = ">=3.12,<4.0"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
